dark mode images fix v2

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -1,11 +1,9 @@
-@media screen {
-    [data-md-color-scheme="slate"] {
+@media (prefers-color-scheme: dark) {
+    img, video {
         /* 
         FIX: images not being displayed properly in dark mode
         Reference:: https://www.youtube.com/watch?v=JONzCyVXa60
         */
-        img, video {
-            filter: invert(95%) hue-rotate(180deg);
-        }
+        filter: invert(95%) hue-rotate(180deg);
     }
 }
